--- a/css/test2.css
+++ b/css/test2.css
@@ -91,6 +91,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .btn button {
@@ -108,6 +109,7 @@ footer {
   background-color: skyblue;
   height: 22rem;
   text-align: center;
+  width: 100%;
 }
 
 footer h2 {
