--- a/css/css6Assignment.css
+++ b/css/css6Assignment.css
@@ -27,7 +27,7 @@ nav h1 {
 
 .cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 3rem;
