--- a/css/mctAssignment.css
+++ b/css/mctAssignment.css
@@ -104,7 +104,7 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5.2rem;
+  margin-top: 7rem;
 }
 
 .hero h1 {
@@ -112,13 +112,62 @@ hr {
   color: #003c2f;
 }
 
-.btn1 {
-  width: 30rem;
+.grey-btn {
   height: 6rem;
-  background-color: #22ad01;
-  color: white;
+  width: 36rem;
+  background-color: #edf2f4;
   border-radius: 5rem;
-  margin-top: 3.6rem;
+  margin-top: 3rem;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.grey-btn h2 {
+  font-size: 2.4rem;
+  margin-left: 5rem;
+  color: #003c2f;
+}
+
+.green-btn {
+  height: 4rem;
+  width: 20rem;
+  background-color: #003c2f;
+  border-radius: 5rem;
+  margin-top: 3rem;
+  position: absolute;
+  top: -2rem;
+  right: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.green-btn h2 {
+  font-size: 1.8rem;
+  margin-left: 2.4rem;
+  color: #edf2f4;
+}
+
+.cream-btn {
+  height: 2rem;
+  width: 10rem;
+  background-color: #e9edc9;
+  border-radius: 5rem;
+  margin-top: 3rem;
+  position: absolute;
+  top: -2rem;
+  right: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.cream-btn h2 {
+  font-size: 1.1rem;
+  margin-left: 1.1rem;
+  color: #22ad01;
 }
 
 /* price container */
@@ -127,7 +176,7 @@ hr {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  margin-top: 4.6rem;
+  margin-top: 5rem;
   padding: 1.4rem;
 }
 
@@ -231,7 +280,7 @@ hr {
 
 /* partners section */
 .partners {
-  margin-top: 5rem;
+  margin-top: 7rem;
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
@@ -288,7 +337,7 @@ hr {
 /* testimonial section */
 .testimonials {
   display: flex;
-  margin-top: 7rem;
+  margin-top: 12rem;
   gap: 1rem;
 }
 
@@ -334,7 +383,7 @@ hr {
 
 /* review and rattings */
 .review-ratting {
-  margin-top: 7rem;
+  margin-top: 9rem;
 }
 
 .review-ratting h1 {
@@ -379,7 +428,7 @@ hr {
 
 /* contact us */
 .contact-us {
-  margin-top: 7rem;
+  margin-top: 9rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -440,7 +489,7 @@ hr {
   color: white;
   margin: 0px auto;
   border-radius: 3rem;
-  margin-top: 7rem;
+  margin-top: 9rem;
 }
 
 .banner-text {
@@ -462,7 +511,7 @@ hr {
   flex-wrap: wrap;
 
   justify-content: space-between;
-  margin-top: 7rem;
+  margin-top: 9rem;
 }
 
 .footer-logo {
@@ -578,8 +627,59 @@ hr {
   }
 
   /* hero */
+
+  .hero {
+    margin-top: 4.2rem;
+  }
+
   .hero h1 {
     font-size: 3.6rem;
+  }
+
+  .grey-btn {
+    height: 6rem;
+    width: 30rem;
+    background-color: #edf2f4;
+  }
+
+  .grey-btn h2 {
+    font-size: 2rem;
+    margin-left: 3.2rem;
+    color: #003c2f;
+  }
+
+  .green-btn {
+    height: 4rem;
+    width: 18rem;
+    background-color: #003c2f;
+  }
+
+  .green-btn h2 {
+    font-size: 1.6rem;
+    margin-left: 1.6rem;
+    color: #edf2f4;
+  }
+
+  .cream-btn {
+    height: 2rem;
+    width: 10rem;
+    background-color: #e9edc9;
+  }
+
+  .cream-btn h2 {
+    font-size: 1.1rem;
+    margin-left: 1.1rem;
+    color: #22ad01;
+  }
+
+  /* price container */
+  .price-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5rem;
+    padding: 1.4rem;
   }
 
   /* partners */
@@ -588,6 +688,10 @@ hr {
   }
 
   /* testimonial image */
+  .testimonials {
+    margin-top: 5rem;
+  }
+
   .testimonial-image {
     display: none;
   }
@@ -597,6 +701,10 @@ hr {
   }
 
   /* review and ratting */
+  .review-ratting {
+    margin-top: 5rem;
+  }
+
   .ratting {
     flex-direction: column;
     gap: 2.8rem;
@@ -609,6 +717,7 @@ hr {
   /* contact us */
   .contact-us {
     flex-direction: column;
+    margin-top: 5rem;
   }
   .contact-image {
     width: 90%;
@@ -621,6 +730,7 @@ hr {
   .banner {
     flex-direction: column;
     justify-content: center;
+    margin-top: 5rem;
   }
   .banner-text h1 {
     font-size: 2.4rem;
@@ -637,6 +747,7 @@ hr {
     flex-direction: column;
     align-items: center;
     gap: 2.8rem;
+    margin-top: 5rem;
   }
 
   /* copy right */
